[platform] cross-platform launcher: exposing the main class name to JVM (IDEA-296932)
GitOrigin-RevId: 66c2478ef6efafeed72b4ee1b0eee3ac857cc6ef