@@ -2,3 +2,5 @@
 -XX:+UseG1GC
 -ea
 -Dsun.io.useCanonCaches=false
+--add-modules=jdk.jcmd
+--add-exports=jdk.jcmd/sun.tools.jps=ALL-UNNAMED
